# StreamFlow

./: .clang-format  .gitignore  CMakeLists.txt  ComponentFactory.cpp  README.md  conanfile.txt  formatAll.sh  main.cpp
.github/workflows/: ccpp.yml
apps/: CMakeLists.txt  main.cpp
appsGraphCut/: CMakeLists.txt  main.cpp
components/: CMakeLists.txt  allComponentIncludes.h  consumer.h  producer.h
components/include/: Application.h  ComponentExchangeQueue.h  ImageDIsplay.h  Ports.h  allComponentIncludes.h  consumer.h  producer.h  webcam.h
components/src/: ComponentFactory.cpp  Consumer.cpp  Producer.cpp  webcam.cpp
components/webcam/: webcam.cpp  webcam.h
include/: Application.h  ComponentBase.h  ComponentExchangeQueue.h  ComponentFactory.h  DocumentedObject.h  ObjectBase.h  Ports.h
src/: CMakeLists.txt
streamFlow/: CMakeLists.txt
streamFlow/components/include/: AutoGraphCut.h  DataTransformer.h  Duplicator.h  ImageDIsplay.h  ImageTransform.h  ImageTransformer.h  OrientationAndMagnitudeImage.h  Video.h  consumer.h  producer.h  webcam.h
streamFlow/components/src/: AutoGraphCut.cpp  Consumer.cpp  DataTransformer.cpp  Duplicator.cpp  ImageTransform.cpp  OrientationAndMagnitude.cpp  Video.cpp  webcam.cpp
streamFlow/framework/include/: Application.h  ComponentBase.h  ComponentExchangeQueue.h  ComponentFactory.h  DocumentedObject.h  GraphGenerator.h  GraphViz.h  Ports.h  producer.h  registeredComponent.h
streamFlow/framework/include/IO/: ComponentExchangeQueue.h  I0_Base.h  Ports.h
streamFlow/framework/src/: ComponentFactory.cpp
streamFlow/nodes/include/: ImageDIsplay.h  allComponentIncludes.h  consumer.h  webcam.h
streamFlow/nodes/src/: ImageDisplay.cpp  Producer.cpp
